# ChangeLog for x11-libs/libxcb
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/ChangeLog,v 1.143 2014/07/29 14:27:27 mgorny Exp $

  29 Jul 2014; Michał Górny <mgorny@gentoo.org> libxcb-1.10.ebuild,
  libxcb-1.9.3-r1.ebuild:
  Fix finding Python when building in a root, bug #503228. Patch by James Le
  Cuirot.

  18 Jun 2014; Michał Górny <mgorny@gentoo.org> libxcb-1.10.ebuild,
  libxcb-1.9.1-r1.ebuild, libxcb-1.9.1.ebuild, libxcb-1.9.3-r1.ebuild,
  libxcb-1.9.3.ebuild:
  Update dependencies to require guaranteed EAPI=5 or multilib ebuilds, bug
  #513718.

  15 Jun 2014; Mike Frysinger <vapier@gentoo.org> libxcb-1.10.ebuild:
  Add arm64 love.

  08 Jun 2014; Agostino Sarubbo <ago@gentoo.org> libxcb-1.10.ebuild:
  Stable for arm, wrt bug #500368

  19 Apr 2014; Agostino Sarubbo <ago@gentoo.org> libxcb-1.10.ebuild:
  Stable for sparc, wrt bug #500368

  17 Apr 2014; Agostino Sarubbo <ago@gentoo.org> libxcb-1.10.ebuild:
  Stable for ia64, wrt bug #500368

  16 Apr 2014; Agostino Sarubbo <ago@gentoo.org> libxcb-1.10.ebuild:
  Stable for ppc64, wrt bug #500368

  08 Apr 2014; Agostino Sarubbo <ago@gentoo.org> libxcb-1.10.ebuild:
  Stable for ppc, wrt bug #500368

  06 Apr 2014; Agostino Sarubbo <ago@gentoo.org> libxcb-1.10.ebuild:
  Stable for x86, wrt bug #500368

  29 Mar 2014; Matt Turner <mattst88@gentoo.org> libxcb-1.10.ebuild:
  alpha stable, bug #500368.

  28 Mar 2014; Jeroen Roovers <jer@gentoo.org> libxcb-1.10.ebuild:
  Stable for HPPA (bug #500368).

  27 Mar 2014; Agostino Sarubbo <ago@gentoo.org> libxcb-1.10.ebuild:
  Stable for amd64, wrt bug #500368

  26 Mar 2014; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  -files/libxcb-1.7-interix.patch, -files/libxcb-1.8-waitall-hang.patch,
  -files/libxcb-1.8.1-multithread-deadlock.patch,
  -files/libxcb-1.9-python-3-exception.patch,
  -files/libxcb-1.9-python-3-iteritems.patch, -libxcb-1.7.ebuild,