@@ -7,29 +7,17 @@ AUX xcb-rebuilder.sh 1511 SHA256 37910aacdcd793a22af2eea07741bbdde8c62096c67ab75
 DIST libxcb-1.10.tar.bz2 475211 SHA256 98d9ab05b636dd088603b64229dd1ab2d2cc02ab807892e107d674f9c3f2d5b5 SHA512 c29ab5027498635d58fd7bfcd77899a406116b25fa8c4ec6513fc1395d8a0f99f602ad20b507660a62000b6fc879860d182cafd29af590e8b14f55150a064f7a WHIRLPOOL 4e11ffa276ef717e8f14183385413b30b52e8848669bf0f3075fb82adf4a4e94d8a98a2505797be055ff9f546e4fc11e94ba148099b6a0c2998da3e0f20fe99a
 DIST libxcb-1.9.1.tar.bz2 373312 SHA256 d44a5ff4eb0b9569e6f7183b51fdaf6f58da90e7d6bfc36b612d7263f83e362f SHA512 541d6e07b1a0da61c3cc1dbdae50ce4e55f1a27e79e277db5af192d02c8360bb3958c597d6692f2c6afcf009ae7b312459f65e8c8d2f1bcc446f7f512bacdd41 WHIRLPOOL cc2af531d5beddec577507d4cf983262069144d7e9667958ce03bba6ceebb907488ddf475253e856b879e81333cfac8bfbc2c8092d60fbfa49a3b447af6e6f68
 DIST libxcb-1.9.3.tar.bz2 400283 SHA256 aad09d223fcb5bd345ce4d1737f178a557b6f2e201128e1ee3c83af46028018b SHA512 796673c8df6bf0e3e1f847a3d565502b4ff4e4981c9104c6ca0367d7a15bffd266860dfb545366a4d96695efd060afe205b990983e08b4da8470a7f0a8d4a7a1 WHIRLPOOL 6de787900ef93c13d304739862b04d6c582dbafeebadf9b260064da92821f0681198364265fe5bcaf12f34f9a9020e3ad7e2dbbdb7cd627a909d803105df2f8b
-EBUILD libxcb-1.10.ebuild 1513 SHA256 4aa535951f754e128579e34324632b27b6927433fd7e2576d49dfff584edbd0b SHA512 4a99deffe894a723910db47303b82f166b9fa825dd4abfe5be85c193c25b6ccfcc474305352e7e88441f203432234b5770f65260c94a396218ba71f0637daff3 WHIRLPOOL a204a2f5301df625c225d1b4321f5aaac5a3a0de91d9ad3886995b71e4cab5422f580e1f8b8ca77b393899b88378f105c76d967a82b0be88c02cd7756844987a
+EBUILD libxcb-1.10.ebuild 1530 SHA256 fd14048feb95a54a47c8036dc2fbcaaf094122fee44d8d44460dd0accb00f9c4 SHA512 3864e58fbcd049b9d492c71137ac60e6324cb8f8fad5e4973e622d5b6b042b73f42e6492487d7742bf08e8c065e09533caa8e0fcaa739420ef91ac4d1d3484d3 WHIRLPOOL deec254275ed4b488b1113ae3be8c08469e349c82690fd53b80852246b0a333ab749b77dddc35ad7f5cd05575e258a90bf3b240c3689096d3816c5f141a69017
 EBUILD libxcb-1.9.1-r1.ebuild 2091 SHA256 137cdcb6209195b10928f2667a3691040f0d41794787a7be8f368fcbf146f91e SHA512 b4d12c71190a5d84f0b2b386ea7a2d2a06f90ef47ff8713cd700b99103042e8010c0b26e7cf515b5d45f5f1bbe711d2e5f5c9823c5f3462b6f8df731417c8646 WHIRLPOOL c30878dfa9bc103119a1f66bbb12303715f30bd7c9ca2de24221d1daf21521d9464252d196d1639d56980eae3b110e8d538af4713f7125985c28c5de99e360d4
 EBUILD libxcb-1.9.1.ebuild 1402 SHA256 6c87148636bcfb2c63ee2326a2c44d73acc41da2d2ba60c1524a71d0fa52ff71 SHA512 603e8ce83fab2ced9b90f6110e26e4cbd8886f29e0801e03deb95286f0484ecf8eafc242e1f602ccf776619f21cc077b7eb31d08f02df1180ad12917e43f8132 WHIRLPOOL 9ac8f7a02e6c37f6078de4c1bb973417e73c2d518dd9dacfbb3e8a8179980ce272691f9eb6f9fb5aaebe493763ed4a0c2a513baca6114ea8eaa3837c9cdde026
 EBUILD libxcb-1.9.3-r1.ebuild 1542 SHA256 bb09890b43df1d5ed0e60ef04abe36793dd3c30cf097e0098156a7927a15b181 SHA512 32d784389f6653c6d5c0c976ac647a9a247ad44eeff6049df292915c1e773f983428b15050519cfc81b753aeff995ed96f37567ce79a2f8f1be6ce432969a000 WHIRLPOOL 9be2604ce3030a28e9c7cfa9f9b82138960b795a4d1ba55ea31e35593c135d50ff1aaef75fbbc46a86716ddaa63598b1af13358068bdca4f06d5b7aaf3a9ca61
 EBUILD libxcb-1.9.3.ebuild 1429 SHA256 11939d6ce0ab2c202da8d3144c9624f6d0f8ae044da65e74670e415ddc78d01f SHA512 207e0ef128cb191b7490335c8f82edce7a4a563f0532d7f67fb10822abbb7ebb261208d277b0cb8b5fd34718e5238a1b844271bae6f380c1ecae6d8abccde50d WHIRLPOOL 4fa29f60f817e14bba389f7c71860ea9a1253a885583aa72ec207c6e7ba4471d87111d8da0462b5c66c3e6cbd495a80822c2b2b7f9e6a3cc585167824f96ce32
-MISC ChangeLog 17828 SHA256 040dd2fe72ad1a9edc3d0ce51a99a49dcbc43ad1b27d003f96c278294ee73c31 SHA512 6d601c606f59925b56ef60e24bc23299e3b72461455967766e865dcdb4765a9507b6729d35a94ee04c4f9d1e60ac99ab123ca4faaf9242b22e2041f599724440 WHIRLPOOL 21fe0754a10d17a6009482619715dc2b6e94771085f2302207ead44a1a895b4fa1c201d3f4973caa1c41465f886845f9b09161e3e0aee0b8bf9d5bcf2c1cbb31
+MISC ChangeLog 17951 SHA256 c6a483290cb4feabb191c03a433303eec2985abfc8cbc92834bf515a9f173895 SHA512 55d95660198831c133e3402d23a66e64838dedc73ce4c9ad947ef548e3e7cabf79f5a204cc401c602a95791248506d6674f590c5c94ee9750556a82ce455d06c WHIRLPOOL e8cedb549b1687f461d76eadcf97e2eeec30c99e2dc2a3f9f60ed2a89a45ce3f1a50b1c29f884b507059077e369891060e7e2fd65541700a22ef42f65d45a88f
 MISC metadata.xml 237 SHA256 0c2aa4d6e3296274ca75e17e881fa5e9aa79c8cf139b02012c9373a1735b42a6 SHA512 389a13c5762b613cd4f40f2aec55a84e4cad8ffe3c7fc9ccd6a775bc51a0a0a5b410c98a2b1216264b983ef7cb15e1caf046b56fe64567c7c2e4c80923082621 WHIRLPOOL e718d25c331f37daff57dfb4819eb97062576e355cdad14360622bafc9428cb1a1d2c470a32fb2db4abc2fddada4bb9dd18c06ae9f3adb2cc6f47312a973b5f7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJT169uXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZO+xcQAJ+ZPjbc/hleRxb1jq7BwHy2
-WT6JdvLzP0j0n5jKZy2dQa/xuIafXesnohjiwFVJ/fBDaYDnodqFaNxEuWTpyY0F
-BqlnlsX3zuCj7VMqZrnJMdNF12dKVh0ms9Y+muCEWSZj0FlxDzjZ4VzGpMHpOpxM
-EG38Tf4Mdk8+uRGwYd9k7lhjvFCIS32RlGDFeNEm5ARbTYL8pw2jSPPGla7oX/g7
-OPvl+FKr/kpsc5VEQuf0f4W1kp2XzSgMcVV/HIi7h549WNb7/BAid2ro1GXOU/+n
-SekfbK2vTP+0jIdDEGjykEill1ld35QZ4hV8V48+pXTOd7wgrG+OjCLJMX9nCKht
-xSG2ebbotEWTUSoXCTtxGDsIvHgmUOOmISacFg+WJ6/yP0HbNzSPRoCufIbL3hZN
-X8cv1tLSfjfFKqT8bQPmdCogRdXSchBKTe+R4faUmNWP27pKtVa2n70SAeXz8sJN
-D4Rv2BlldIsp7ZyuS1jDE9E91C6T2IKmDR0SGeKXEBV3Im3M5P5aVpTIla1Y+Nz2
-grL7jQlo1Sq8hYS1rWcw6owxB25P0Hy5EWNIYoSYJPn5nqHnPTCBRr56HCIwfMtA
-GsNfH9Z8BjHbHSttUgRYRw3UQrRVZSh5OwqkMtob067QpZk+pxLoerTibdwJOvUr
-pKfZjPUfdPONhjsfF1tN
-=1ob/
+iF4EAREIAAYFAlP1WVgACgkQC77qH+pIQ6RfWgD+ITz5qGkQgrWcMheR/PRyVVv2
+J+d2VmlBh063MsamZGcA/3IBh4L13Vn4jJxmdRexEejEW8ch1Kmxzf3Su+XRFzvh
+=z0r4
 -----END PGP SIGNATURE-----
